# rss_to_mail

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  Feed.ml  LICENSE  README.md  Script_API.ml  atom_format.ml  default.nix  dune-project  feed_aggregator.gs  flake.nix  jbuild  main.gs  opam-selection.nix  rss_format.ml  rss_to_mail-script.opam  rss_to_mail-unix.opam  rss_to_mail.gs  rss_to_mail.ml  rss_to_mail.opam  xml_utils.ml  xml_utils.mli
config/: config.ml  config.mli  dune
etc/nixos/: rss_to_mail.nix
feed/: Feed.ml  dune  jbuild
feed_parser/: atom.ml  dune  feed_parser.ml  html_content.ml  html_to_text.ml  jbuild  operators.ml  rss.ml  xml.ml  xml.mli
feeds_config/: dune  error.ml  error.mli  feeds_config.ml  feeds_config.mli
lib/feed/: dune
lib/feed_parser/: atom.ml  dune  feed_parser.ml  html_to_text.ml  xml.ml
lib/feeds_config/: error.ml  error.mli  feeds_config.ml  feeds_config.mli
lib/persistent_data/: dune  persistent_data.ml  persistent_data.mli
lib/rss_to_mail/: SeenSet.ml  dune  feed_desc.ml  mail_body.ml  mail_body_html.ml  rss_to_mail.ml  rss_to_mail.mli  utils.ml
lib/scraper/: dune  scraper.ml
lib/send_emails/: dune  send_emails.ml  send_emails.mli
main_mirage/: .gitignore  config.ml  unikernel.ml
main_native/: dune  fetch.ml  jbuild  mail.ml  main_native.ml  persistent_data.ml  run_main.ml  run_scraper.ml  utils.ml
main_script/: atom_format.ml  fetch.ml  fetch.mli  jbuild  main.gs  main_script.ml  properties.ml  properties.mli  rss_format.ml  rss_to_mail.ml  spreadsheet.ml  utils.ml  xml_utils.mli
persistent_data/: dune  jbuild  persistent_data.ml  persistent_data.mli  v0.ml  v1.ml  v2.ml
rss_to_mail/: SeenSet.ml  SeenSet.mli  check_bundle.ml  check_feed.ml  check_scraper.ml  diff.ml  dune  feed_desc.ml  feed_options.ml  jbuild  mail_body.ml  mail_body_html.ml  mail_body_text.ml  rss_to_mail.ml  rss_to_mail.mli  update_feed.ml  utils.ml
scraper/: dune  jbuild  scrap.ml  scraper.ml  selector.ml  selector.mli
send_emails/: send_emails.ml  send_emails.mli
std/: dune  jbuild  std.ml
swaks/: dune  jbuild  swaks.ml
tests/: dune
tests/feed_parser/: jbuild  ref  test.atom  test.rss  test_parser.ml
tests/fetch.t/: run.t
tests/parse_config.t/: run.t
tests/rss_to_mail/: dune  feed_datas.sexp  feeds.sexp  jbuild  ref  test.ml
tests/rss_to_mail/feeds/: atom.atom  bad_xmlns.atom  content_type.atom  dune_blog.html  empty.rss  error.rss  firefox.html  no_title.rss  relative.atom  relative.rss  rss.rss  simple.html
tests/run_scraper/: advanced.expected  advanced.html  advanced.sexp  dune  scrap_id.expected  simple.expected  simple.sexp
tests/run_scraper.t/: advanced.sexp  run.t  simple.sexp
tests/scraper/: jbuild  test_scraper.ml
tests/tools/: dune  parse_config.ml
tests/unit/: dune  mdx_test.ml  persistent_data.md  run_tests.ml  test_html_to_text.ml  uptodate.ml
