opam-version: "1.2"
version: "dev"
homepage: "https://github.com/Julow/rss_to_mail"
depends: [
	"dune" { build & >= "2.0" }
	"containers"
	"uri"
	"xmlm"
	"markup"
	"lambdasoup"
  "lwt_ssl"
	"lwt"
	"lwt_ppx"
	"cohttp-lwt-unix"
	"cmdliner"
	"tyxml"
	"tyxml-ppx"
	"calendar"
	"colombe"
	"sendmail-lwt"
  "logs"
  "x509" { < "0.10" }
  "alcotest" { with-test }
]
build: [[ "dune" "build" "-p" name "-j" jobs ]]
