opam-version: "1.2"
version: "dev"
homepage: "https://github.com/Julow/rss_to_mail"
depends: [
  "ocaml" { build & >= "4.10.0" }
	"dune" { build & >= "2.0" }
	"uri"
	"xmlm"
	"markup"
	"lambdasoup"
  "lwt_ssl"
	"lwt"
	"lwt_ppx"
	"cohttp-lwt-unix"
	"cmdliner"
	"tyxml"
	"tyxml-ppx"
	"calendar"
	"colombe" { = "0.2.0" }
	"sendmail-lwt"
  "logs"
  "x509" { >= "0.10" }
  "ptime"
  "cstruct-unix"
  "sexplib0"
  "sexplib"
  "alcotest" { with-test }
  "mdx" { with-test }
]
build: [[ "dune" "build" "-p" name "-j" jobs ]]
