opam-version: "1.2"
version: "dev"
homepage: "https://github.com/Julow/rss_to_mail"
depends: [
  "ocaml" { build & >= "4.10.0" }
	"dune" { build & >= "2.0" }
	"uri"
	"xmlm"
	"markup"
	"lambdasoup"
  "lwt_ssl"
	"lwt"
	"cohttp-lwt-unix"
	"cmdliner"
	"tyxml"
	"tyxml-ppx" { >= "4.4.0" }
	"colombe" { = "0.4.0" }
	"sendmail-lwt"
  "logs"
  "x509" { >= "0.10" }
  "ptime"
  "cstruct-unix"
  "sexplib0"
  "sexplib"
  "emile"
  "mrmime" { >= "0.3.2" }
  "alcotest" { with-test }
  "mdx" { with-test }
]
build: [[ "dune" "build" "-p" name "-j" jobs ]]
