(executable
 (name test)
 (libraries lwt lwt.unix rss_to_mail sexplib persistent_data feeds_config))

(rule
 (deps
  feeds.sexp
  feed_datas.sexp
  (glob_files feeds/*))
 (action
  (with-stdout-to
   output
   (run ./test.exe))))

(rule
 (alias runtest)
 (package rss_to_mail-unix)
 (action
  (diff ref output)))
