(env
 (_
  (binaries
   (../../bin/unix/main_native.exe as rss_to_mail))))

(rule
 (with-stdout-to
  simple.output
  (with-stdin-from
   simple.sexp
   (run rss_to_mail run-scraper %{dep:simple.html}))))

(rule
 (alias runtest)
 (action
  (diff simple.expected simple.output)))

(rule
 (with-stdout-to
  advanced.output
  (with-stdin-from
   advanced.sexp
   (run rss_to_mail run-scraper %{dep:advanced.html}))))

(rule
 (alias runtest)
 (package rss_to_mail-unix)
 (action
  (diff advanced.expected advanced.output)))
