(test
 (name run_tests)
 (modules run_tests uptodate)
 (libraries alcotest rss_to_mail))

(toplevel (name mdx_test) (libraries mdx.top mdx.test sexplib rss_to_mail feeds_config persistent_data))

(rule
 (with-stdout-to
  persistent_data.output
  (run %{exe:mdx_test.exe} %{dep:mdx_test.ml} %{dep:persistent_data.md})))

(rule
 (alias runtest)
 (action
  (diff persistent_data.md persistent_data.output)))
